fix blog list PostCard title truncating, move truncating from default to link-markdown

--- a/src/styles/components/link.css
+++ b/src/styles/components/link.css
@@ -5,7 +5,7 @@
   }
 
   .link-markdown {
-    @apply text-headings underline;
+    @apply text-headings truncate underline;
   }
 
   .link {
